apply plugin: 'java-library'
apply plugin: 'java'

ext {
    slf4jVersion = '1.7.7'
    scastleVersion = '1.51.0.0'
    junitVersion = '4.11'
}

dependencies {
    api fileTree(dir: 'libs', include: ['*.jar'])

    api "org.slf4j:slf4j-api:${slf4jVersion}"
    api "org.slf4j:slf4j-log4j12:${slf4jVersion}"

    api "com.madgag.spongycastle:core:${scastleVersion}" // for SHA3 and SECP256K1
    api "com.madgag.spongycastle:prov:${scastleVersion}" // for SHA3 and SECP256K1
    api group: 'com.google.guava', name: 'guava', version: '23.0'
    api "com.cedarsoftware:java-util:1.8.0" // for deep equals

    // concurrent unique queue
    compile group: 'com.hybhub', name: 'concurrent-util', version: '0.3.0'
    
    testImplementation "junit:junit:${junitVersion}"
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
